Fix Playwright CF deployment: apt-get update, --no-sandbox, and remove reflection
- PlaywrightSystemDepsInstaller: run apt-get update (with writable Dir::State::lists
  redirect) before apt-get download so package lists are populated in CF containers;
  add 4 transitive dep packages (libavahi-common3, libavahi-client3, libwayland-server0,
  libxcb-randr0); fix duplicate isCloudFoundry() method; only write marker if packages
  were actually extracted; expose isCloudFoundry() as public for use by session service
- PlaywrightSessionService: replace reflection-based LD_LIBRARY_PATH patching with
  Playwright.CreateOptions.setEnv() (no JVM --add-opens flags needed); add launchOptions()
  helper that appends --no-sandbox/--disable-setuid-sandbox on CF (kernel user namespaces
  unavailable); inject PlaywrightSystemDepsInstaller via @RequiredArgsConstructor
- manifest.yml: remove JAVA_TOOL_OPTIONS (caused JRE 8 crash in buildpack tools)
- README.md: update CF deployment section to reflect single-buildpack approach and
  document PlaywrightSystemDepsInstaller; add CF troubleshooting entries

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>